kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pravnamreza
  labels:
    app: pravnamreza
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pravnamreza
  template:
    metadata:
      labels:
        app: pravnamreza
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: pravnamreza-storage
          emptyDir: {}
      containers:
        - name: pravnamreza
          image: pravnamreza
          volumeMounts:
            - name: pravnamreza-storage
              mountPath: /storage
          command:
            - gunicorn
            - pravnamreza.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
            - --workers
            - "1"
            - --threads
            - "3"
            - --timeout
            - "90"
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 400Mi
              cpu: 200m
            limits:
              memory: 600Mi
              cpu: 400m
        - name: pravnamreza-nginx
          image: nginx:alpine
          volumeMounts:
            - name: pravnamreza-storage
              mountPath: /usr/share/nginx/html
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 100Mi
              cpu: 100m
