kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pravnamreza
spec:
  selector:
    app: pravnamreza
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: pravnamreza-nginx
spec:
  selector:
    app: pravnamreza
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
